fix(style): Ensure cards do not overflow

--- a/assets/scss/components/card.scss
+++ b/assets/scss/components/card.scss
@@ -58,6 +58,7 @@
     @include spacing($horizontal: variables.$s-4, $vertical: variables.$s-4);
 
     flex: 1 1 auto;
+    overflow: auto;
 }
 
 .card-footer {
